allow use of security manager... for now.